--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 ---
-abstract: 'various subroutines to format text.'
+abstract: 'Format text'
 author:
   - 'Shlomi Fish <shlomif@cpan.org>'
 build_requires:
@@ -8,7 +8,7 @@ build_requires:
 configure_requires:
   Module::Build: 0
 dynamic_config: 1
-generated_by: 'Module::Build version 0.38, CPAN::Meta::Converter version 2.120630'
+generated_by: 'Module::Build version 0.3901, CPAN::Meta::Converter version 2.120921'
 keywords:
   - format
   - formatting
@@ -25,7 +25,7 @@ name: Text-Format
 provides:
   Text::Format:
     file: lib/Text/Format.pm
-    version: 0.56
+    version: 0.57
 requires:
   Carp: 0
   strict: 0
@@ -35,4 +35,4 @@ resources:
   homepage: http://www.shlomifish.org/open-source/projects/Text-Format/
   license: http://dev.perl.org/licenses/
   repository: http://bitbucket.org/shlomif/web-cpan
-version: 0.56
+version: 0.57
