--- a/META.yml
+++ b/META.yml
@@ -8,7 +8,7 @@ build_requires:
 configure_requires:
   Module::Build: 0
 dynamic_config: 1
-generated_by: 'Module::Build version 0.3901, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Module::Build version 0.4007, CPAN::Meta::Converter version 2.132830'
 keywords:
   - format
   - formatting
@@ -25,9 +25,10 @@ name: Text-Format
 provides:
   Text::Format:
     file: lib/Text/Format.pm
-    version: 0.58
+    version: 0.59
 requires:
   Carp: 0
+  perl: 5.008
   strict: 0
   vars: 0
   warnings: 0
@@ -35,4 +36,4 @@ resources:
   homepage: http://www.shlomifish.org/open-source/projects/Text-Format/
   license: http://dev.perl.org/licenses/
   repository: http://bitbucket.org/shlomif/web-cpan
-version: 0.58
+version: 0.59
